:bug: fix: Consertando action do form e página de agradecimento

--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
     <h1>Contato</h1>
     <section class="container contato-area">
       <img src="assets/images/undraw_envelope.png" alt="Imagem de um envelope e rapaz ao lado">
-      <form action="https://formsubmit.co/devjefs@gmail.com" method="POST">
+      <form action="https://formsubmit.co/7c998d29b304819c6cfabafead4e5f26" method="POST">
         <h4>Quer entrar em contato comigo?</h4>
         <h4>Preencha o formulário e entrarei em contato o mais rápido possível.</h4>
         <label><input type="text" name="nome" id="nome" placeholder="Nome" required minlength="3"></label>
         <label><input type="email" name="email" id="email" placeholder="E-mail" required></label>
         <label><input type="text" name="assunto" id="assunto" placeholder="Assunto" required></label>
         <textarea name="mensagem" id="campoTexto" placeholder="Escreva a sua mensagem" required></textarea>
-        <input type="hidden" name="_next" value="http://127.0.0.1:5500//thanks.html">
+        <input type="hidden" name="_next" value="https://www.jefersonsantos.dev.br/thanks.html">
         <input type="hidden" name="_captcha" value="false">
         <button type="submit" class="button-contato contato-form">Enviar</button>
       </form>
